2007-07-27  Michael Snyder  <msnyder@access-company.com>

	* coffgen.c (_bfd_coff_read_internal_relocs): Return if count is zero.

	* elf32-i386.c (elf_i386_check_relocs): Check for null pointer.

2007-07-27  H.J. Lu  <hongjiu.lu@intel.com>

	* config.bfd (x86_64-*-mingw*): Don't include x86_64coff_vec.

2007-07-26  Michael Snyder  <msnyder@access-company.com>

	* coff-i386.c (coff_i386_rtype_to_howto): Guard against null.

	* linker.c (bfd_section_already_linked_table_insert): Change 
	return type from void to boolean.  Return FALSE on failure.
	(_bfd_generic_section_already_linked): Test return value of
	bfd_section_already_linked_table_insert, call fatal on error.

	* elflink.c (_bfd_elf_section_already_linked): Test return value
	of bfd_section_already_linked_table_insert, call fatal on error.

	* libbfd-in.h (bfd_section_already_linked_table_insert): Update
	return type to bfd_boolean.

	* libbfd.h: Regenerate.

2007-07-26  Adam Nemet  <anemet@caviumnetworks.com>

	* archive.c (do_slurp_bsd_armap, do_slurp_coff_armap,
	bfd_slurp_armap): Improve function comment.

2007-07-26  Michael Snyder  <msnyder@access-company.com>

	* linker.c (already_linked_newfunc): Check for NULL return from
	bfd_hash_allocate.

	* coffgen.c (fixup_symbol_value): Guard against null; 
	bfd_is_com_section will dereference the section pointer.

	* syms.c (bfd_decode_symclass): Guard against NULL, since 
	bfd_is_com_section dereferences the pointer.

	* srec.c (srec_scan): Check for EOF (critical because return value
	will be used as array index).

	* coffgen.c (_bfd_coff_read_internal_relocs): If internal_relocs
	are not to be cached, free the temporary buffer.

	* aoutx.h (slurp_reloc_table): Return TRUE if reloc_size == zero
	or count == zero.

	* tekhex.c (first_phase): Check return value for null.

	* elf.c (_bfd_elf_get_synthetic_symtab): Remove meaningless 
	pointer increment.

2007-07-26  Alan Modra  <amodra@bigpond.net.au>
